--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "@apollo/client": "^3.5.10",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.23",
     "chai": "^4.3.6",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.1",
     "fetch-retry": "^5.0.2",
     "graphql": "^16.3.0",
     "mocha": "^9.2.2",
