--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ethers": "^5.6.1",
     "fetch-retry": "^5.0.2",
     "graphql": "^16.3.0",
+    "mathjs": "^10.4.1",
     "mocha": "^9.2.2",
     "react": "^17.0.2",
     "typescript": "^4.6.2"
