--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^17.0.23",
     "chai": "^4.3.6",
     "cross-fetch": "^3.1.5",
+    "danfojs-node": "^1.0.4",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.1",
     "fetch-retry": "^5.0.2",
