--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mathjs": "^10.4.1",
     "mocha": "^9.2.2",
     "react": "^17.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
 }
