--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.4",
     "@apollo/client": "^3.5.10",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
@@ -15,6 +16,7 @@
     "mocha": "^9.2.2",
     "react": "^17.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "web3": "^1.7.4"
   }
 }
