--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
+    "alchemy-sdk": "^2.2.3",
     "chai": "^4.3.6",
     "cross-fetch": "^3.1.5",
     "danfojs-node": "^1.0.4",
